--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,8 @@ li {
 }
 .navbar__bouton {
   background: rgb(147, 86, 220);
+  background: -moz-linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
+  background: -webkit-linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
   background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9356dc",endColorstr="#ff79da",GradientType=1);
   border-style: solid;
@@ -85,7 +87,6 @@ li {
   padding: 5px 10px;
   color: #f6f6f6;
   text-align: center;
-  width: -moz-fit-content;
   width: fit-content;
   padding: 15px 20px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -116,20 +117,6 @@ li {
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1019607843);
   border-style: solid;
   border-color: var(#F6F6F6);
-  position: relative;
-}
-.fonctionnement__bouton i {
-  margin-right: 50px;
-}
-.fonctionnement__bouton span {
-  background-color: #9356DC;
-  color: #FFFFFF;
-  border-radius: 50%;
-  padding: 6px;
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  left: -14px;
 }
 
 .restaurant {
@@ -166,28 +153,29 @@ li {
   font-weight: 100;
   background: #101010;
   font-size: 1.5rem;
-  -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
   color: transparent;
   transition: transform 300ms ease-in-out;
 }
 .restaurant__like-btn .fa-heart:hover {
   font-weight: 700;
   background: rgb(147, 86, 220);
+  background: -moz-linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
+  background: -webkit-linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
   background: linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9356dc",endColorstr="#ff79da",GradientType=1);
-  -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
   color: transparent;
   transform: scale(1.02);
 }
 .restaurant__like-btn .checked .fa-heart {
   font-weight: 700;
   background: rgb(147, 86, 220);
+  background: -moz-linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
+  background: -webkit-linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
   background: linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9356dc",endColorstr="#ff79da",GradientType=1);
-  -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
@@ -253,4 +241,6 @@ li {
   margin-top: 30px;
   font-size: 24px;
   font-weight: 700;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
