--- a/cartes-restaurants/palettedugout.css
+++ b/cartes-restaurants/palettedugout.css
@@ -16,4 +16,99 @@
 }
 .footer__link {
   margin-bottom: 8px;
+}
+
+.header__img-container {
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid;
+  border-color: #F6F6F6;
+  padding: 10px 0;
+}
+.header__img-container__image {
+  height: 30px;
+}
+.header .recherche {
+  display: flex;
+  justify-content: center;
+  background-color: #EAEAEA;
+  padding: 10px 0;
+}
+.header .recherche__ville {
+  border: none;
+  background-color: #EAEAEA;
+  color: #353535;
+  font-weight: bold;
+  margin-left: 10px;
+}
+.header .recherche .fa-solid {
+  margin-left: 60px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  padding-right: 10px;
+  padding-left: 10px;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+h1 {
+  margin: 0;
+}
+
+h2 {
+  weight: 300;
+  font-size: 16px;
+  line-height: 18px;
+  padding-top: 20px;
+}
+
+h3 {
+  padding: 7px;
+}
+
+p {
+  margin-top: -15px;
+  margin-left: 6px;
+}
+
+li {
+  list-style: none;
+  border-radius: 15px;
+  background-color: #FFFFFF;
+  height: 69px;
+  padding-left: 15px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+.picture-jay {
+  width: 100%;
+}
+.picture-jay__img {
+  width: 100%;
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.fond-carte {
+  background-color: #F6F6F6;
+}
+
+.palettedugout-title {
+  font-family: shrikhand, serif;
+  padding-top: 20px;
+  border-radius: 15px;
 }/*# sourceMappingURL=palettedugout.css.map */
