--- a/cartes-restaurants/palettedugout.scss
+++ b/cartes-restaurants/palettedugout.scss
@@ -1,1 +1,64 @@
 @import './../sass/layout/footer';
+@import './../sass/layout/header';
+
+body{
+    margin: 0;
+    padding: 0;
+}
+main{
+    padding-right: 10px;
+    padding-left: 10px;
+    font-family: "Roboto", sans-serif;
+    text-decoration: none;
+    font-weight: normal;
+}
+h1{
+    margin: 0;
+}
+h2{
+    weight: 300;
+    font-size: 16px;
+    line-height: 18px;
+    padding-top: 20px;
+}
+h3{
+    padding: 7px;
+}
+p{
+    margin-top:-15px;
+    margin-left: 6px;
+}
+
+
+li{
+    list-style: none;
+    border-radius: 15px;
+    background-color: #FFFFFF;
+    height: 69px;
+    padding-left: 15px;
+    
+}
+ul{
+    padding: 0;
+    margin: 0;
+    
+}
+.picture-jay{
+    width: 100%;
+        &__img{
+        width: 100%;
+        height: 275px;
+        object-fit: cover;
+        object-position: center;
+    }
+   
+}
+.fond-carte{
+    background-color: #F6F6F6;
+}
+.palettedugout-title{
+    font-family: shrikhand, serif; 
+    padding-top: 20px;
+    border-radius: 15px;
+}
+
