--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -20,7 +20,7 @@
     }
     &__bouton{
         @include button-gradient;
-        border-style: solid;
+        border-style: none;
         border-radius: 25px;
         font-size: $font-size-s;
         font-weight: $font-weight-medium;
@@ -31,5 +31,6 @@
         padding: 15px 20px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
         cursor:pointer;
+        font-family: $font-secondary;
     }
 }
