--- a/sass/main.css
+++ b/sass/main.css
@@ -78,7 +78,7 @@ li {
   background: rgb(147, 86, 220);
   background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9356dc",endColorstr="#ff79da",GradientType=1);
-  border-style: solid;
+  border-style: none;
   border-radius: 25px;
   font-size: 1rem;
   font-weight: 500;
@@ -90,6 +90,7 @@ li {
   padding: 15px 20px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  font-family: "Roboto", sans-serif;
 }
 
 .fonctionnement {
@@ -114,12 +115,13 @@ li {
   border-radius: 20px;
   font-weight: 500;
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1019607843);
-  border-style: solid;
+  border-style: none;
   border-color: var(#F6F6F6);
   position: relative;
 }
 .fonctionnement__bouton i {
   margin-right: 50px;
+  color: #7E7E7E;
 }
 .fonctionnement__bouton span {
   background-color: #9356DC;
@@ -128,8 +130,13 @@ li {
   padding: 6px;
   width: 24px;
   height: 24px;
+  font-family: "Roboto", sans-serif;
   position: absolute;
   left: -14px;
+  padding-bottom: 22px;
+  text-align: center;
+  padding-right: 7px;
+  padding-top: 4px;
 }
 
 .restaurant {
@@ -142,7 +149,8 @@ li {
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1019607843);
 }
 .restaurant__image {
-  border-radius: 15px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
   height: 251px;
 }
 .restaurant__title {
@@ -157,38 +165,8 @@ li {
   font-weight: 300;
   padding-left: 10px;
 }
-.restaurant__like-btn {
-  padding-left: 20px;
-  display: flex;
-  cursor: pointer;
-}
-.restaurant__like-btn .fa-heart {
-  font-weight: 100;
-  background: #101010;
-  font-size: 1.5rem;
-  -webkit-background-clip: text;
-          background-clip: text;
-  color: transparent;
-  transition: transform 300ms ease-in-out;
-}
-.restaurant__like-btn .fa-heart:hover {
-  font-weight: 700;
-  background: rgb(147, 86, 220);
-  background: linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9356dc",endColorstr="#ff79da",GradientType=1);
-  -webkit-background-clip: text;
-          background-clip: text;
-  color: transparent;
-  transform: scale(1.02);
-}
-.restaurant__like-btn .checked .fa-heart {
-  font-weight: 700;
-  background: rgb(147, 86, 220);
-  background: linear-gradient(180deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9356dc",endColorstr="#ff79da",GradientType=1);
-  -webkit-background-clip: text;
-          background-clip: text;
-  color: transparent;
+.restaurant__like-btn i {
+  padding-left: 300px;
 }
 
 .header__img-container {
