--- a/cartes-restaurants/palettedugout.scss
+++ b/cartes-restaurants/palettedugout.scss
@@ -16,7 +16,7 @@ h1{
     margin: 0;
 }
 h2{
-    weight: 300;
+    font-weight: 300;
     font-size: 16px;
     line-height: 18px;
     padding-top: 20px;
