--- a/sass/components/_restaurant.scss
+++ b/sass/components/_restaurant.scss
@@ -8,6 +8,7 @@
   width: 100%;
   background-color:$color-pure;
   box-shadow: 0px 3px 15px 0px #0000001A;
+  position: relative ;
   
   
   
@@ -30,15 +31,18 @@
     font-size:$font-size-s;
     font-weight: 300;
     padding-left: 10px;
+    padding-bottom: 5px;
     
 
     
   }
   &__like-btn {
-    i{
-      padding-left: 300px;
-      
-    }
+     position: absolute;
+     right: 15px;
+     bottom: 25px;
+     
+     
+
     
     
     
