--- a/sass/main.css
+++ b/sass/main.css
@@ -82,7 +82,6 @@ li {
   border-radius: 25px;
   font-size: 1rem;
   font-weight: 500;
-  padding: 5px 10px;
   color: #f6f6f6;
   text-align: center;
   width: -moz-fit-content;
@@ -147,6 +146,7 @@ li {
   width: 100%;
   background-color: #FFFFFF;
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1019607843);
+  position: relative;
 }
 .restaurant__image {
   border-top-right-radius: 15px;
@@ -164,9 +164,12 @@ li {
   font-size: 1rem;
   font-weight: 300;
   padding-left: 10px;
+  padding-bottom: 5px;
 }
-.restaurant__like-btn i {
-  padding-left: 300px;
+.restaurant__like-btn {
+  position: absolute;
+  right: 15px;
+  bottom: 25px;
 }
 
 .header__img-container {
