--- a/cartes-restaurants/palettedugout.css
+++ b/cartes-restaurants/palettedugout.css
@@ -45,6 +45,15 @@
   margin-left: 60px;
 }
 
+.header {
+  position: relative;
+}
+.header span {
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -71,6 +80,7 @@ main {
 .listes__accompagnements {
   margin-top: -15px;
   margin-left: 6px;
+  font-size: 15px;
 }
 
 .price {
@@ -85,6 +95,7 @@ main {
 
 .picture-jay {
   width: 100%;
+  height: 275px;
 }
 .picture-jay__img {
   width: 100%;
@@ -97,6 +108,8 @@ main {
 
 .fond-carte {
   background-color: #F6F6F6;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
 }
 
 .palettedugout-title {
@@ -105,6 +118,11 @@ main {
   padding-top: 20px;
   border-radius: 15px;
   font-size: 28px;
+  position: relative;
+}
+.palettedugout-title span {
+  position: absolute;
+  right: 15px;
 }
 
 .entrees__title {
@@ -134,10 +152,16 @@ main {
   border-bottom: 3px solid #99E2D0;
 }
 
+.bouton-commander {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 35px;
+  padding-top: 35px;
+}
+
 .btn_commander {
   border-radius: 25px;
   border-style: none;
-  text-align: center;
   padding: 15px 20px;
   font-size: 16px;
   font-weight: 500;
@@ -145,10 +169,11 @@ main {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   font-family: "Roboto", sans-serif;
-  margin-left: 90px;
-  margin-top: 40px;
-  margin-bottom: 40px;
   padding-right: 50px;
   padding-left: 50px;
-  background-color: #FF79DA;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
+}
+.btn_commander:hover {
+  opacity: 0.88;
+  box-shadow: 0 4px 10px 0 #000026;
 }/*# sourceMappingURL=palettedugout.css.map */
