--- a/cartes-restaurants/palettedugout.scss
+++ b/cartes-restaurants/palettedugout.scss
@@ -1,7 +1,14 @@
 @import './../sass/layout/footer';
 @import './../sass/layout/header';
 
-
+.header{
+    position: relative;
+    span{
+    position: absolute;
+    left: 15px; 
+    bottom: 15px;   
+    }
+}
 body{
     margin: 0;
     padding: 0;
@@ -26,6 +33,7 @@ main{
     &__accompagnements{
         margin-top:-15px;
         margin-left: 6px;
+        font-size: 15px;
     } 
 }
 .price{
@@ -40,6 +48,7 @@ main{
 }
 .picture-jay{
     width: 100%;
+    height: 275px;
         &__img{
         width: 100%;
         height: 275px;
@@ -50,6 +59,8 @@ main{
 }
 .fond-carte{
     background-color: #F6F6F6;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
 }
 .palettedugout-title{
     margin: 0;
@@ -57,6 +68,11 @@ main{
     padding-top: 20px;
     border-radius: 15px;
     font-size: 28px;
+    position: relative;
+    span{
+        position: absolute;
+        right: 15px;
+    }
 
     
   
@@ -86,10 +102,16 @@ main{
     width: 40px;
     border-bottom: 3px solid #99E2D0;
 }
+
+.bouton-commander{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 35px;
+    padding-top: 35px;
+}
 .btn_commander{
     border-radius: 25px;
     border-style: none;
-    text-align: center;
     padding: 15px 20px;
     font-size: 16px;
     font-weight: 500;
@@ -97,12 +119,13 @@ main{
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     cursor:pointer;
     font-family: "Roboto", sans-serif;
-    margin-left: 90px;
-    margin-top: 40px;
-    margin-bottom: 40px;
     padding-right: 50px;
     padding-left: 50px;
-    background-color:#FF79DA;
+    background: linear-gradient(0deg, rgba(147, 86, 220, 1) 0%, rgba(255, 121, 218, 1) 97%);
+    &:hover{
+        opacity: 0.88;
+        box-shadow: 0 4px 10px 0 #000026;
+    }
 
 
 
