--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -31,5 +31,11 @@
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
         cursor:pointer;
         font-family: $font-secondary;
+            &:hover{
+                opacity: 0.88;
+                box-shadow: 0 4px 10px 0 #000026;
+                
+        }
+
     }
 }
