--- a/sass/components/_restaurant.scss
+++ b/sass/components/_restaurant.scss
@@ -16,6 +16,15 @@
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     height: 251px;
+    position: relative;
+      span{
+        position: absolute;
+        border-radius: 2px;
+        color: $color-tertiaire;
+        top: 20px;
+        right: 20px;
+        
+      }
    
    
   }
@@ -25,27 +34,43 @@
     font-weight: 700;
     padding-top: 10px;
     padding-left: 10px;
-    
   }
   &__subtitle {
     font-size:$font-size-s;
     font-weight: 300;
     padding-left: 10px;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
     
 
     
   }
   &__like-btn {
      position: absolute;
-     right: 15px;
-     bottom: 25px;
-     
-     
+     right: 20px;
+     bottom: 40px;
+     i{
+      position: absolute;
+      width: 30px;
+      height: 30px;
+     }
 
-    
-    
-    
+    }
+   .my-heart-full{
+      opacity: 0;
+      transition-property: all;
+      transition-duration: 2s;
+        &:hover{
+        opacity: 1;
+        background: linear-gradient(0deg, rgba(147, 86, 220, 1) 0%, rgba(255, 121, 218, 1) 97%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        
+      }
+     }
+  
+
 
   }
-}
+
+
