--- a/sass/main.css
+++ b/sass/main.css
@@ -91,6 +91,10 @@ li {
   cursor: pointer;
   font-family: "Roboto", sans-serif;
 }
+.navbar__bouton:hover {
+  opacity: 0.88;
+  box-shadow: 0 4px 10px 0 #000026;
+}
 
 .fonctionnement {
   display: flex;
@@ -105,21 +109,25 @@ li {
   padding-top: 20px;
 }
 .fonctionnement__bouton {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  height: 72px;
+  margin: 0px 20px;
   color: #000000;
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   background-color: #F6F6F6;
-  padding-bottom: 20px;
-  padding-top: 20px;
   border-radius: 20px;
   font-weight: 500;
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1019607843);
   border-style: none;
-  border-color: var(#F6F6F6);
   position: relative;
 }
 .fonctionnement__bouton i {
-  margin-right: 50px;
+  margin-left: 20px;
   color: #7E7E7E;
 }
 .fonctionnement__bouton span {
@@ -152,6 +160,14 @@ li {
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   height: 251px;
+  position: relative;
+}
+.restaurant__image span {
+  position: absolute;
+  border-radius: 2px;
+  color: #99E2D0;
+  top: 20px;
+  right: 20px;
 }
 .restaurant__title {
   color: #000000;
@@ -164,12 +180,29 @@ li {
   font-size: 1rem;
   font-weight: 300;
   padding-left: 10px;
-  padding-bottom: 5px;
+  padding-bottom: 15px;
 }
 .restaurant__like-btn {
   position: absolute;
-  right: 15px;
-  bottom: 25px;
+  right: 20px;
+  bottom: 40px;
+}
+.restaurant__like-btn i {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+}
+.restaurant .my-heart-full {
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 2s;
+}
+.restaurant .my-heart-full:hover {
+  opacity: 1;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 97%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .header__img-container {
