--- a/cartes-restaurants/palettedugout.css
+++ b/cartes-restaurants/palettedugout.css
@@ -44,6 +44,22 @@
 .header .recherche .fa-solid {
   margin-left: 60px;
 }
+.header .loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 .header {
   position: relative;
@@ -110,8 +126,23 @@ main {
   background-color: #F6F6F6;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
+  animation: linear fond-carte;
+  animation-duration: auto;
+  animation-timeline: scroll view(inline);
 }
 
+@keyframes fond-carte {
+  from {
+    opacity: 0;
+    -webkit-clip-path: inset(50% 0% 50% 0%);
+            clip-path: inset(50% 0% 50% 0%);
+  }
+  to {
+    opacity: 1;
+    -webkit-clip-path: inset(0% 0% 0% 0%);
+            clip-path: inset(0% 0% 0% 0%);
+  }
+}
 .palettedugout-title {
   margin: 0;
   font-family: shrikhand, serif;
