--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,9 @@
 @use "../utils" as *;
 
+
+
+
+
 .header {
     &__img-container{
         display: flex;
@@ -27,5 +31,24 @@
         margin-left: 60px;
         }
     }
+    .loader{
+        border: 16px solid #f3f3f3;
+        border-top: 16px solid #3498db;
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear;
+    }
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+   
+    
+   
+    
+        
+        
+    
 }
 
