--- a/cartes-restaurants/palettedugout.scss
+++ b/cartes-restaurants/palettedugout.scss
@@ -9,6 +9,9 @@
     bottom: 15px;   
     }
 }
+.go{
+    cursor: pointer;
+}
 body{
     margin: 0;
     padding: 0;
@@ -27,7 +30,11 @@ main{
     background-color: #FFFFFF;
     height: 69px;
     padding-left: 15px;
-    
+    opacity: 0;
+    transform: translateY(-30px);
+    animation: defiler 1s ease-out forwards;
+
+
     &__ennonces_menus{
         padding: 7px;
     }
@@ -38,9 +45,25 @@ main{
     } 
     
 }
+@keyframes defiler {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px);
+}
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
 .price{
     float: right;
     padding-right: 5px;
+}
+.element-hide{
+    background-color: #99E2D0;
+    
 }
 
 .blocks{
@@ -63,21 +86,9 @@ main{
     background-color: #F6F6F6;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
-    animation: linear fond-carte;
-    animation-duration: auto;
-    animation-timeline: scroll view(inline);
+    
+   }
 
-   }
-   @keyframes fond-carte {
-    from {
-        opacity: 0;
-        clip-path: inset(50% 0% 50% 0%);
-      }
-      to {
-        opacity: 1;
-        clip-path: inset(0% 0% 0% 0%);
-      }
-   }
 .palettedugout-title{
     margin: 0;
     font-family: shrikhand, serif; 
