--- a/sass/components/_fonctionnement.scss
+++ b/sass/components/_fonctionnement.scss
@@ -52,3 +52,15 @@
     }
    
 }
+@media screen and  ( max-width: 1024px ) 
+
+    {
+
+        .fonctionnement{
+            display: flex;
+            flex-direction: column;
+        }
+
+
+
+}
