--- a/sass/components/_fonctionnement.scss
+++ b/sass/components/_fonctionnement.scss
@@ -1,25 +1,27 @@
 @use "../utils/" as *;
 
 .fonctionnement{
-  display: flex;
-  flex-direction: column;
   gap:16px;
-  padding: 0 20px;
   padding-top: 40px;
   margin-bottom: 50px;
+  padding: 0 20px;
+  
     &__title{
         font-size: $font-size-l;
         padding-top: 20px;
         
+    }
+    &__lists{
+        margin-top: 35px;
     }
     &__bouton{
         display: flex;
         flex-direction: row;
         justify-content: start;
         align-items: center;
+        width: 100%;
         gap: 20px;
         height: 72px;
-        margin: 0px 20px;
         color: $color-pure-inverted;
         font-family: $font-secondary;
         font-size: $font-size-s;
@@ -52,13 +54,31 @@
     }
    
 }
-@media screen and  ( max-width: 1024px ) 
+@media screen and  ( min-width: 768px ) 
 
     {
 
         .fonctionnement{
             display: flex;
             flex-direction: column;
+            padding-left: 20px;
+            padding-top: 15px;
+           
+                &__bouton{
+                padding-top: 30px;
+                padding-bottom: 30px;
+                padding-left: 6px;
+                padding-right: 6px;
+                width: 322px;
+                
+            }
+            &__lists{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                gap: 30px;
+            }
+            
         }
 
 
