--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     gap:20px;
     padding-block: 35px;
+    margin-bottom:40px;
     &__title{
         padding-inline: 15px;
         text-align: center;
