--- a/sass/components/_restaurant.scss
+++ b/sass/components/_restaurant.scss
@@ -9,7 +9,8 @@
   background-color:$color-pure;
   box-shadow: 0px 3px 15px 0px #0000001A;
   position: relative ;
-  
+  margin-bottom: 15px;
+
   
   
   &__image {
@@ -18,7 +19,6 @@
     height: 251px;
     position: relative;
   }
-   
    
   
   &__title {
@@ -74,4 +74,6 @@
 
   }
 
-
+ 
+ 
+   
