--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,13 +1,15 @@
 @use "../utils" as *;
 
 .footer{
-    display: flex;
-    flex-direction: column;
     background-color: $color-canvas-dark;
     color: $color-pure;
     font-size: $font-size-m;
     padding-left: 25px;
     padding-top: 20px;
+    &__lists{
+        display: flex;
+        flex-direction: column;
+    }
     &__title{
             font-family: $font-primary;
             font-style: italic;
@@ -22,4 +24,15 @@
             
     }    
         
+}
+@media screen and ( min-width: 768px ) 
+
+
+{
+
+.footer__lists{
+    display: flex;
+    flex-direction: row;
+}
+
 }
