--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -5,15 +5,30 @@
   flex-direction: column;
   justify-content: space-between;
   background-color:$color-gris-clair ;
-  padding-right: 20px;
   padding-left: 20px;
   gap: 18px;
   padding-bottom: 60px;
+  padding-right: 20px;
   &__title {
     margin-bottom: 30px;
     margin-top: 30px;
     font-size: 24px;
     font-weight: 700;
   }
+  
+   
  
+}
+
+
+@media screen and ( min-width: 768px ) 
+  
+{
+  .restaurants__lists{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    row-gap: 50px;
+    column-gap: 29px;
+  }
+  
 }
