--- a/sass/components/_fonctionnement.scss
+++ b/sass/components/_fonctionnement.scss
@@ -9,6 +9,7 @@
     &__title{
         font-size: $font-size-l;
         padding-top: 20px;
+        margin-left: 30px;
         
     }
     &__lists{
