--- a/sass/main.css
+++ b/sass/main.css
@@ -106,6 +106,7 @@ li {
 .fonctionnement__title {
   font-size: 1.5rem;
   padding-top: 20px;
+  margin-left:30px;
 }
 .fonctionnement__lists {
   margin-top: 35px;
