--- a/sass/components/_fonctionnement.scss
+++ b/sass/components/_fonctionnement.scss
@@ -79,6 +79,11 @@
                 justify-content: center;
                 gap: 30px;
             }
+            &__title{
+                box-sizing: none;
+                padding-left: 30px;
+               
+            }
             
         }
 
