--- a/sass/main.css
+++ b/sass/main.css
@@ -106,7 +106,7 @@ li {
 .fonctionnement__title {
   font-size: 1.5rem;
   padding-top: 20px;
-  margin-left:30px;
+  margin-left: 30px;
 }
 .fonctionnement__lists {
   margin-top: 35px;
@@ -168,6 +168,10 @@ li {
     flex-direction: row;
     justify-content: center;
     gap: 30px;
+  }
+  .fonctionnement__title {
+    box-sizing: none;
+    padding-left: 30px;
   }
 }
 .restaurant {
