--- a/sass/components/_fonctionnement.scss
+++ b/sass/components/_fonctionnement.scss
@@ -57,24 +57,19 @@
 }
 @media screen and  ( min-width: 768px ) 
 
-    {
+{
 
-        .fonctionnement{
-            padding-left: 20px;
-            padding-top: 15px;
-           
-                &__bouton{
-                padding-top: 30px;
-                padding-bottom: 30px;
-                padding-left: 6px;
-                padding-right: 6px;
-                width: 322px;
-                
+.fonctionnement{
+    padding: 10 70 10 70;
+    margin-right: 129px;
+    margin-left: 129px;
+            &__bouton{
+                width: 25%  
             }
             &__lists{
                 display: flex;
                 flex-direction: row;
-                justify-content: center;
+                justify-content: space-between;
                 gap: 30px;
             }       
         }
