--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -29,6 +29,13 @@
     grid-template-columns: repeat(2,1fr);
     row-gap: 50px;
     column-gap: 29px;
+    margin-right: 152px;
+    margin-left: 122px;
   }
-  
+  .restaurants__title{
+    margin-left: 125px;
+  }
+                
+           
 }
+  
