--- a/sass/main.css
+++ b/sass/main.css
@@ -151,20 +151,17 @@ li {
 
 @media screen and (min-width: 768px) {
   .fonctionnement {
-    padding-left: 20px;
-    padding-top: 15px;
+    padding: 10 70 10 70;
+    margin-right: 129px;
+    margin-left: 129px;
   }
   .fonctionnement__bouton {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 6px;
-    padding-right: 6px;
-    width: 322px;
+    width: 25%;
   }
   .fonctionnement__lists {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     gap: 30px;
   }
 }
@@ -184,6 +181,8 @@ li {
   border-top-left-radius: 15px;
   height: 251px;
   position: relative;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .restaurant__title {
   color: #000000;
@@ -211,8 +210,9 @@ li {
 }
 .restaurant__like-btn {
   position: absolute;
-  right: 20px;
-  bottom: 40px;
+  right: 50px;
+  bottom: 50px;
+  font-size: 30px;
 }
 .restaurant__like-btn i {
   position: absolute;
@@ -242,39 +242,48 @@ li {
 .header__img-container__image {
   height: 30px;
 }
-.header .recherche {
+
+.recherche {
   display: flex;
   justify-content: center;
   background-color: #EAEAEA;
   padding: 10px 0;
 }
-.header .recherche__ville {
+.recherche__ville {
   border: none;
   background-color: #EAEAEA;
   color: #353535;
   font-weight: bold;
   margin-left: 10px;
 }
-.header .recherche .fa-solid {
+.recherche .fa-solid {
   margin-left: 60px;
 }
-.header .loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
+
+.loader {
+  border: 16px solid #F3F3F3;
+  border-top: 16px solid #3498DB;
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 2s linear;
+  animation: spin 3s linear;
+  position: fixed;
+  z-index: 1;
+  opacity: 0;
+  top: 50%;
+  left: 46%;
 }
+
 @keyframes spin {
   0% {
+    opacity: 1;
     transform: rotate(0deg);
   }
   100% {
+    opacity: 0;
     transform: rotate(360deg);
   }
 }
-
 .footer {
   background-color: #353535;
   color: #FFFFFF;
@@ -299,9 +308,17 @@ li {
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 40px;
+    padding-right: 50px;
+    padding-top: 20px;
+  }
   .footer__lists {
     display: flex;
     flex-direction: row;
+    gap: 20px;
   }
 }
 .restaurants {
@@ -328,5 +345,10 @@ li {
     row-gap: 50px;
     -moz-column-gap: 29px;
          column-gap: 29px;
+    margin-right: 152px;
+    margin-left: 122px;
+  }
+  .restaurants__title {
+    margin-left: 125px;
   }
 }/*# sourceMappingURL=main.css.map */
