--- a/cartes-restaurants/palettedugout.css
+++ b/cartes-restaurants/palettedugout.css
@@ -22,9 +22,17 @@
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 40px;
+    padding-right: 50px;
+    padding-top: 20px;
+  }
   .footer__lists {
     display: flex;
     flex-direction: row;
+    gap: 20px;
   }
 }
 .header__img-container {
@@ -37,39 +45,48 @@
 .header__img-container__image {
   height: 30px;
 }
-.header .recherche {
+
+.recherche {
   display: flex;
   justify-content: center;
   background-color: #EAEAEA;
   padding: 10px 0;
 }
-.header .recherche__ville {
+.recherche__ville {
   border: none;
   background-color: #EAEAEA;
   color: #353535;
   font-weight: bold;
   margin-left: 10px;
 }
-.header .recherche .fa-solid {
+.recherche .fa-solid {
   margin-left: 60px;
 }
-.header .loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
+
+.loader {
+  border: 16px solid #F3F3F3;
+  border-top: 16px solid #3498DB;
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 2s linear;
+  animation: spin 3s linear;
+  position: fixed;
+  z-index: 1;
+  opacity: 0;
+  top: 50%;
+  left: 46%;
 }
+
 @keyframes spin {
   0% {
+    opacity: 1;
     transform: rotate(0deg);
   }
   100% {
+    opacity: 0;
     transform: rotate(360deg);
   }
 }
-
 .header {
   position: relative;
 }
@@ -131,7 +148,13 @@ main {
 }
 
 .element-hide {
-  background-color: #99E2D0;
+  position: relative;
+  right: 50px;
+  top: 20px;
+  background: #99E2D0;
+  border: 20px;
+  width: 50px;
+  height: 50px;
 }
 
 .blocks {
@@ -152,10 +175,51 @@ main {
      object-position: center;
 }
 
+.picture-stil {
+  width: 100%;
+  height: 275px;
+}
+.picture-stil__img {
+  width: 100%;
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.picture-louis {
+  width: 100%;
+  height: 275px;
+}
+.picture-louis__img {
+  width: 100%;
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.picture-toa {
+  width: 100%;
+  height: 275px;
+}
+.picture-toa__img {
+  width: 100%;
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
 .fond-carte {
   background-color: #F6F6F6;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
+  position: relative;
+  bottom: 27px;
 }
 
 .palettedugout-title {
@@ -222,4 +286,13 @@ main {
 .btn_commander:hover {
   opacity: 0.88;
   box-shadow: 0 4px 10px 0 #000026;
+}
+
+@media screen and (min-width: 768px) {
+  .fond-carte {
+    margin-right: 200px;
+    margin-left: 200px;
+    padding-right: 100px;
+    padding-left: 100px;
+  }
 }/*# sourceMappingURL=palettedugout.css.map */
