--- a/cartes-restaurants/palettedugout.scss
+++ b/cartes-restaurants/palettedugout.scss
@@ -62,7 +62,17 @@ main{
     padding-right: 5px;
 }
 .element-hide{
-    background-color: #99E2D0;
+    position: relative ;
+    right: 50px;
+    top: 20px;
+    background: #99E2D0;
+    border: 20px;
+    width: 50px;
+    height: 50px;
+
+
+    
+    
     
 }
 
@@ -79,14 +89,47 @@ main{
         height: 275px;
         object-fit: cover;
         object-position: center;
+
     }
    
+}
+.picture-stil{
+    width: 100%;
+    height: 275px;
+        &__img{
+            width: 100%;
+            height: 275px;
+            object-fit: cover;
+            object-position: center;    
+        }
+}
+.picture-louis{
+    width: 100%;
+    height: 275px;
+        &__img{
+            width: 100%;
+            height: 275px;
+            object-fit: cover;
+            object-position: center;    
+        }
+}
+.picture-toa{
+    width: 100%;
+    height: 275px;
+        &__img{
+            width: 100%;
+            height: 275px;
+            object-fit: cover;
+            object-position: center;    
+        }
 }
 .fond-carte{
     background-color: #F6F6F6;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
-    
+    position: relative;
+    bottom: 27px;
+     
    }
 
 .palettedugout-title{
@@ -154,10 +197,15 @@ main{
         box-shadow: 0 4px 10px 0 #000026;
     }
 
-
-
-
-
-
 }
 
+@media screen and ( min-width: 768px ) 
+{
+.fond-carte{
+    margin-right: 200px;
+    margin-left: 200px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+}
