--- a/sass/components/_restaurant.scss
+++ b/sass/components/_restaurant.scss
@@ -18,6 +18,7 @@
     border-top-left-radius: 15px;
     height: 251px;
     position: relative;
+    object-fit: cover;
   }
    
   
@@ -47,8 +48,9 @@
   }
   &__like-btn {
      position: absolute;
-     right: 20px;
-     bottom: 40px;
+     right: 50px;
+     bottom: 50px;
+     font-size: 30px;
      i{
       position: absolute;
       width: 30px;
