--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,6 @@
 
 
 
-
 .header {
     &__img-container{
         display: flex;
@@ -15,6 +14,7 @@
            height: 30px;
        }
     }
+}    
     .recherche {
         display: flex;
         justify-content: center;
@@ -31,21 +31,36 @@
         margin-left: 60px;
         }
     }
-    .loader{
-        border: 16px solid #f3f3f3;
-        border-top: 16px solid #3498db;
+    
+    .loader {
+        border: 16px solid #F3F3F3;
+        border-top: 16px solid #3498DB;
         border-radius: 50%;
         width: 120px;
         height: 120px;
-        animation: spin 2s linear;
-    }
-    @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg);} 
+        animation: spin 3s linear;
+        position: fixed;
+        z-index: 1;
+        opacity: 0;
+        top: 50%;
+        left:46%
       }
+      @keyframes spin {
+        0% {
+          opacity: 1;
+          transform: rotate(0deg);
+        }
+        100% {opacity: 0;
+          transform: rotate(360deg);
+        }
+      }
+    
+       
+        
+        
    
     
-  }     
+      
  
         
     
