--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -20,6 +20,8 @@
     &__link{
             margin-bottom: 8px;
             cursor: pointer;
+            text-decoration: none;
+            color:$color-pure ;
            
             
     }    
