--- a/cartes-restaurants/palettedugout.css
+++ b/cartes-restaurants/palettedugout.css
@@ -19,6 +19,8 @@
 .footer__link {
   margin-bottom: 8px;
   cursor: pointer;
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 @media screen and (min-width: 768px) {
@@ -63,13 +65,27 @@
   margin-left: 60px;
 }
 
+.loader-container {
+  background-color: #F3F3F3;
+  animation: fond 3s ease;
+  opacity: 1;
+}
+
+@keyframes fond {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .loader {
   border: 16px solid #F3F3F3;
-  border-top: 16px solid #3498DB;
+  border-top: 16px solid #FF79DA;
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 3s linear;
+  animation: spin 4s linear;
   position: fixed;
   z-index: 1;
   opacity: 0;
@@ -117,14 +133,16 @@ main {
   list-style: none;
   border-radius: 15px;
   background-color: #FFFFFF;
+  font-size: 18px;
   height: 69px;
   padding-left: 15px;
+  margin-bottom: 15px;
+  padding-bottom: 24px;
+  display: flex;
+  justify-content: space-between;
   opacity: 0;
   transform: translateY(-30px);
-  animation: defiler 1s ease-out forwards;
-}
-.listes__ennonces_menus {
-  padding: 7px;
+  animation: defiler 3s ease-out forwards;
 }
 .listes__accompagnements {
   margin-top: -15px;
@@ -143,18 +161,16 @@ main {
   }
 }
 .price {
-  float: right;
   padding-right: 5px;
 }
 
 .element-hide {
-  position: relative;
-  right: 50px;
-  top: 20px;
   background: #99E2D0;
-  border: 20px;
   width: 50px;
-  height: 50px;
+  margin: -10px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  opacity: 1;
 }
 
 .blocks {
