--- a/cartes-restaurants/palettedugout.scss
+++ b/cartes-restaurants/palettedugout.scss
@@ -28,16 +28,16 @@ main{
     list-style: none;
     border-radius: 15px;
     background-color: #FFFFFF;
+    font-size: 18px;
     height: 69px;
     padding-left: 15px;
+    margin-bottom: 15px;
+    padding-bottom: 24px;
+    display: flex;
+    justify-content: space-between;
     opacity: 0;
     transform: translateY(-30px);
-    animation: defiler 1s ease-out forwards;
-
-
-    &__ennonces_menus{
-        padding: 7px;
-    }
+    animation: defiler 3s ease-out forwards;
     &__accompagnements{
         margin-top:-15px;
         margin-left: 6px;
@@ -58,21 +58,15 @@ main{
 
 
 .price{
-    float: right;
     padding-right: 5px;
 }
 .element-hide{
-    position: relative ;
-    right: 50px;
-    top: 20px;
     background: #99E2D0;
-    border: 20px;
     width: 50px;
-    height: 50px;
-
-
-    
-    
+    margin: -10px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    opacity: 1;
     
 }
 
