--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -32,28 +32,39 @@
         }
     }
     
-    .loader {
-        border: 16px solid #F3F3F3;
-        border-top: 16px solid #3498DB;
-        border-radius: 50%;
-        width: 120px;
-        height: 120px;
-        animation: spin 3s linear;
-        position: fixed;
-        z-index: 1;
-        opacity: 0;
-        top: 50%;
-        left:46%
+    .loader-container{
+      background-color: #F3F3F3;
+      animation:fond 3s ease;
+      opacity:1;
+    }
+    @keyframes fond {
+      0% {opacity:1; }
+      100%{ opacity:0;}
+    }
+    
+    .loader{
+      border: 16px solid #F3F3F3;
+      border-top: 16px solid $color-secondaire;
+      border-radius: 50%;
+      width: 120px;
+      height: 120px;
+      animation: spin 4s linear;
+      position: fixed;
+      z-index: 1;
+      opacity: 0;
+      top: 50%;
+      left:46%
+    }
+    @keyframes spin {
+      0% {
+        opacity: 1;
+        transform: rotate(0deg);
       }
-      @keyframes spin {
-        0% {
-          opacity: 1;
-          transform: rotate(0deg);
-        }
-        100% {opacity: 0;
-          transform: rotate(360deg);
-        }
+      100% {opacity: 0;
+        transform: rotate(360deg);
       }
+    }
+     
     
        
         
