--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,6 +16,7 @@
             font-size: $font-size-s;
             color:$color-pure;
             padding-bottom: 15px;
+            margin:0;
         }
     &__link{
             margin-bottom: 8px;
