--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -32,15 +32,7 @@
         }
     }
     
-    .loader-container{
-      background-color: #F3F3F3;
-      animation:fond 3s ease;
-      opacity:1;
-    }
-    @keyframes fond {
-      0% {opacity:1; }
-      100%{ opacity:0;}
-    }
+   
     
     .loader{
       border: 16px solid #F3F3F3;
@@ -48,12 +40,12 @@
       border-radius: 50%;
       width: 120px;
       height: 120px;
-      animation: spin 4s linear;
+      animation: spin 7s linear;
       position: fixed;
-      z-index: 1;
+      z-index: 1000;
       opacity: 0;
       top: 50%;
-      left:46%
+      left:46%;
     }
     @keyframes spin {
       0% {
@@ -63,6 +55,15 @@
       100% {opacity: 0;
         transform: rotate(360deg);
       }
+    }
+    .loader-container{
+      background-color: #F3F3F3;
+      animation:fond 3s;
+    }
+    @keyframes fond {
+      0% {opacity:1; }
+      50% {opacity: 1;}
+      100%{ opacity:0;}
     }
      
     
