--- a/sass/main.css
+++ b/sass/main.css
@@ -261,29 +261,15 @@ li {
   margin-left: 60px;
 }
 
-.loader-container {
-  background-color: #F3F3F3;
-  animation: fond 3s ease;
-  opacity: 1;
-}
-
-@keyframes fond {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 .loader {
   border: 16px solid #F3F3F3;
   border-top: 16px solid #FF79DA;
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 4s linear;
+  animation: spin 7s linear;
   position: fixed;
-  z-index: 1;
+  z-index: 1000;
   opacity: 0;
   top: 50%;
   left: 46%;
@@ -297,6 +283,22 @@ li {
   100% {
     opacity: 0;
     transform: rotate(360deg);
+  }
+}
+.loader-container {
+  background-color: #F3F3F3;
+  animation: fond 3s;
+}
+
+@keyframes fond {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 .footer {
@@ -316,6 +318,7 @@ li {
   font-size: 1rem;
   color: #FFFFFF;
   padding-bottom: 15px;
+  margin: 0;
 }
 .footer__link {
   margin-bottom: 8px;
